--- a/action.yaml
+++ b/action.yaml
@@ -56,7 +56,7 @@ runs:
         customHeaders: '{"Content-Type": "multipart/form-data","cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
         
-    - id: post
+    - id: post2
       uses: fjogeleit/http-request-action@v1.9.1
       with:
         url: ${{ inputs.orca_url }}
