--- a/action.yaml
+++ b/action.yaml
@@ -52,8 +52,8 @@ runs:
       with:
         url: ${{ inputs.orca_url }}
         method: 'POST'
-        data: '{ "config":"${{ inputs.config_id }}", "type":"veracode_file", "file":"${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
-        customHeaders: '{"content-type":"multipart/form-data", "cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
+        data: '{"config":"${{ inputs.config_id }}", "type":"veracode_file", "file":"${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
+        customHeaders: '{"Content-Type":"multipart/form-data", "cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
         
     - id: post2
@@ -61,8 +61,8 @@ runs:
       with:
         url: ${{ inputs.orca_url }}
         method: 'POST'
-        data: '{ body: {"config":"${{ inputs.config_id }}"}'
-        customHeaders: '{"content-type":"multipart/form-data", "cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
+        data: '{"config":"${{ inputs.config_id }}"}'
+        customHeaders: '{"Content-Type":"multipart/form-data", "cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
       
 branding:
