--- a/action.yaml
+++ b/action.yaml
@@ -62,9 +62,9 @@ runs:
       with:
         url: ${{ inputs.orca_url }}
         method: 'POST'
-        data: '{"config":"${{ inputs.config_id }}"}'
+        data: '{"config":"${{ inputs.config_id }}", "type":"veracode_file"}'
         customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
-        files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
+        files: '{"file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
         timeout: ${{ inputs.request_timeout }}
       
 branding:
