--- a/action.yaml
+++ b/action.yaml
@@ -60,14 +60,14 @@ runs:
         files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
         timeout: ${{ inputs.request_timeout }}
         
-    - id: task
-      uses: fjogeleit/http-request-action@v1.9.1
-      with:
-        url: 'https://orca.sherwin.com/api/v2/task/'
-        method: 'POST'
-        data: '{"config":"${{ inputs.config_id }}", "contentType":"application/json"}'
-        customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
-        timeout: ${{ inputs.request_timeout }}
+#     - id: task
+#       uses: fjogeleit/http-request-action@v1.9.1
+#       with:
+#         url: 'https://orca.sherwin.com/api/v2/task/'
+#         method: 'POST'
+#         data: '{"config":"${{ inputs.config_id }}", "contentType":"application/json"}'
+#         customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
+#         timeout: ${{ inputs.request_timeout }}
       
 branding:
   icon: git-branch
