--- a/action.yaml
+++ b/action.yaml
@@ -50,24 +50,24 @@ runs:
         customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
   
-    - id: post
-      uses: fjogeleit/http-request-action@v1.9.1
-      with:
-        url: ${{ inputs.orca_url }}
-        method: 'POST'
-        data: '{"config":"${{ inputs.config_id }}", "type":"veracode_file", "contentType":"multipart/form-data"}'
-        customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
-        files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
-        timeout: ${{ inputs.request_timeout }}
-        
-#     - id: task
+#     - id: post
 #       uses: fjogeleit/http-request-action@v1.9.1
 #       with:
-#         url: 'https://orca.sherwin.com/api/v2/task/'
+#         url: ${{ inputs.orca_url }}
 #         method: 'POST'
-#         data: '{"config":"${{ inputs.config_id }}", "contentType":"application/json"}'
-#         customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
+#         data: '{"config":"${{ inputs.config_id }}", "type":"veracode_file", "contentType":"multipart/form-data"}'
+#         customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
+#         files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
 #         timeout: ${{ inputs.request_timeout }}
+        
+    - id: task
+      uses: fjogeleit/http-request-action@v1.9.1
+      with:
+        url: 'https://orca.sherwin.com/api/v2/task/'
+        method: 'POST'
+        data: '{"config":"${{ inputs.config_id }}", "contentType":"application/json"}'
+        customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
+        timeout: ${{ inputs.request_timeout }}
       
 branding:
   icon: git-branch
