--- a/action.yaml
+++ b/action.yaml
@@ -65,7 +65,7 @@ runs:
       with:
         url: 'https://orca.sherwin.com/api/v2/task/'
         method: 'POST'
-        data: '{"config":"${{ inputs.config_id }}", "contentType":"application/json"}'
+        data: '{"config":${{ inputs.config_id }}, "contentType":"application/json"}'
         customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
       
