--- a/action.yaml
+++ b/action.yaml
@@ -50,15 +50,15 @@ runs:
         customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
   
-#     - id: post
-#       uses: fjogeleit/http-request-action@v1.9.1
-#       with:
-#         url: ${{ inputs.orca_url }}
-#         method: 'POST'
-#         data: '{"config":${{ inputs.config_id }}, "type":"veracode_file", "contentType":"multipart/form-data"}'
-#         customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
-#         files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
-#         timeout: ${{ inputs.request_timeout }}
+    - id: post
+      uses: fjogeleit/http-request-action@v1.9.1
+      with:
+        url: ${{ inputs.orca_url }}
+        method: 'POST'
+        data: '{"config":${{ inputs.config_id }}, "type":"veracode_file", "contentType":"multipart/form-data"}'
+        customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
+        files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
+        timeout: ${{ inputs.request_timeout }}
         
     - id: task
       uses: fjogeleit/http-request-action@v1.9.1
