--- a/action.yaml
+++ b/action.yaml
@@ -47,7 +47,7 @@ runs:
       with:
         url: 'https://orca.sherwin.com/api/v2/config/${{ inputs.config_id }}/delete_files/'
         method: 'DELETE'
-        customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
+        customHeaders: '{"Authorization":"Token ${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
   
     - id: post
@@ -56,7 +56,7 @@ runs:
         url: ${{ inputs.orca_url }}
         method: 'POST'
         data: '{"config":${{ inputs.config_id }}, "type":"veracode_file", "contentType":"multipart/form-data"}'
-        customHeaders: '{"cache-control": "no-cache", "Authorization":"${{ inputs.orca_api_key }}"}'
+        customHeaders: '{"cache-control": "no-cache", "Authorization":"Token ${{ inputs.orca_api_key }}"}'
         files: '{ "file": "${{ inputs.artifact_path }}/${{ inputs.artifact_name }}"}'
         timeout: ${{ inputs.request_timeout }}
         
@@ -66,7 +66,7 @@ runs:
         url: 'https://orca.sherwin.com/api/v2/task/'
         method: 'POST'
         data: '{"config":${{ inputs.config_id }}, "contentType":"application/json"}'
-        customHeaders: '{"Authorization":"${{ inputs.orca_api_key }}"}'
+        customHeaders: '{"Authorization":"Token ${{ inputs.orca_api_key }}"}'
         timeout: ${{ inputs.request_timeout }}
       
 branding:
